--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Pocket Therabuddy",
+  "name": "pocket-therabuddy",
   "version": "1.0.0",
   "description": "Pocket-sized mental health tool-kit application",
   "main": "src/server.js",
