heroku config and package json edit

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "lifemanager",
+  "name": "pocket-therabuddy",
   "version": "1.0.0",
-  "description": "Manage your Life",
+  "description": "Mental health toolkit",
   "main": "src/server.js",
   "scripts": {
     "start": "node src/server.js",
@@ -9,14 +9,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/MxOliver/LifeManager.git"
+    "url": "git+https://github.com/MxOliver/Pocket-Therabuddy.git"
   },
   "author": "Oliver L Coley",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/MxOliver/LifeManager/issues"
+    "url": "https://github.com/MxOliver/Pocket-Therabuddy/issues"
   },
-  "homepage": "https://github.com/MxOliver/LifeManager#readme",
+  "homepage": "https://github.com/MxOliver/Pocket-Therabuddy#readme",
   "devDependencies": {
     "faker": "^4.1.0",
     "jasmine": "^3.3.1",
@@ -31,6 +31,7 @@
     "express-flash": "0.0.2",
     "express-session": "^1.15.6",
     "express-validator": "^5.3.1",
+    "heroku": "^7.22.9",
     "morgan": "^1.9.1",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
