--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "pocket-therabuddy",
   "version": "1.0.0",
   "description": "Mental health toolkit",
+  "engines": {
+    "node": "10.13.0",
+    "npm": "6.7.0"
+  },
   "main": "src/server.js",
   "scripts": {
     "start": "node src/server.js",
