--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "pocket-therabuddy",
   "version": "1.0.0",
+  "engines": {
+    "node": "10.13.0",
+    "npm": "6.7.0"
+  },
   "description": "Pocket-sized mental health tool-kit application",
   "main": "src/server.js",
   "scripts": {
