--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "express-validator": "^5.3.1",
     "heroku": "^7.22.9",
     "morgan": "^1.9.1",
+    "nodemon": "^1.18.11",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "pg": "^7.9.0",
