--- a/client/package.json
+++ b/client/package.json
@@ -4,14 +4,12 @@
     "private": true,
     "main": "index.js",
     "dependencies": {
-        "combine-reducers": "^1.0.0",
         "react": "^16.8.6",
         "react-dom": "^16.8.6",
         "react-redux": "^7.0.2",
         "react-scripts": "2.1.8",
         "redux": "^4.0.1",
-        "redux-thunk": "^2.3.0",
-        "uuid": "^3.3.2"
+        "redux-thunk": "^2.3.0"
     },
     "scripts": {
         "start": "react-scripts start",
@@ -19,6 +17,7 @@
         "test": "react-scripts test",
         "eject": "react-scripts eject"
     },
+    "proxy": "http://localhost:3001/",
     "eslintConfig": {
         "extends": "react-app"
     },
@@ -29,13 +28,7 @@
         "not op_mini all"
     ],
     "devDependencies": {
-        "babel-core": "^6.26.0",
-        "babel-loader": "^7.1.4",
-        "babel-preset-env": "^1.6.1",
-        "babel-preset-react": "^6.24.1",
-        "html-webpack-plugin": "^3.0.6",
-        "webpack": "^4.30.0",
-        "webpack-cli": "^3.3.0",
-        "webpack-dev-server": "^3.1.0"
+        "combine-reducers": "^1.0.0",
+        "uuid": "^3.3.2"
     }
 }
