--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "main": "src/server.js",
   "scripts": {
     "start": "node src/server.js",
+    "dev": "nodemon src/server.js",
     "test": "export NODE_ENV=test&& jasmine"
   },
   "repository": {
@@ -43,6 +44,7 @@
     "pg": "^7.9.0",
     "pg-hstore": "^2.3.2",
     "sequelize": "^5.3.0",
-    "sequelize-cli": "^5.4.0"
+    "sequelize-cli": "^5.4.0",
+    "concurrently": "^4.0.1"
   }
 }
