--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "request": "^2.88.0"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
     "concurrently": "^4.1.0",
