--- a/package.json
+++ b/package.json
@@ -13,10 +13,7 @@
     "server": "nodemon src/server.js",
     "client": "npm start --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
-    "test": "export NODE_ENV=test&& jasmine",
-    "heroku-postbuild":
-      "NPM_CONFIG_PRODUCTION=false npm install --prefix client 
-       && npm run build --prefix client"
+    "test": "export NODE_ENV=test&& jasmine"
   },
   "repository": {
     "type": "git",
