--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "client-install": "npm install --prefix client",
     "start": "node src/server.js",
-    "server": "nodemon src/server.js",
+    "server": "nodemon src/server.js --ignore './client'",
     "client": "npm start --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
     "test": "export NODE_ENV=test&& jasmine",
@@ -36,12 +36,14 @@
     "body-parser": "^1.18.3",
     "concurrently": "^4.1.0",
     "cors": "^2.8.5",
+    "d3": "^5.9.2",
     "dotenv": "^7.0.0",
     "ejs": "^2.6.1",
     "express": "^4.16.4",
     "express-flash": "0.0.2",
     "express-session": "^1.15.6",
     "heroku": "^7.22.9",
+    "http-proxy-middleware": "^0.19.1",
     "morgan": "^1.9.1",
     "nodemon": "^1.18.11",
     "passport": "^0.4.0",
