--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@nivo/line": "^0.56.2",
     "axios": "^0.18.0",
     "canvasjs": "^1.8.1",
     "chai": "^4.2.0",
@@ -20,7 +21,8 @@
     "recharts": "^1.5.0",
     "redux": "^4.0.1",
     "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "victory": "^32.2.0"
   },
   "proxy": "http://localhost:3001",
   "scripts": {
