--- a/client/package.json
+++ b/client/package.json
@@ -7,13 +7,18 @@
     "axios": "^0.18.0",
     "canvasjs": "^1.8.1",
     "chai": "^4.2.0",
+    "d3": "^5.9.2",
     "enzyme": "^3.9.0",
     "enzyme-adapter-react-16": "^1.12.1",
     "fetch-mock": "^7.3.3",
     "history": "^4.9.0",
     "mdbreact": "^4.13.0",
+    "moment": "^2.24.0",
+    "momentjs": "^2.0.0",
     "nivo": "^0.31.0",
     "react": "^16.8.6",
+    "react-chartjs": "^1.2.0",
+    "react-d3-library": "^1.1.8",
     "react-dom": "^16.8.6",
     "react-redux": "^7.0.2",
     "react-router": "^4.3.1",
