--- a/client/package.json
+++ b/client/package.json
@@ -27,6 +27,7 @@
     "redux": "^4.0.1",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
+    "uuid": "^3.3.2",
     "victory": "^32.2.0"
   },
   "proxy": "http://localhost:3001",
