--- a/client/package.json
+++ b/client/package.json
@@ -17,7 +17,6 @@
     "momentjs": "^2.0.0",
     "nivo": "^0.31.0",
     "react": "^16.8.6",
-    "react-chartjs": "^1.2.0",
     "react-d3-library": "^1.1.8",
     "react-dom": "^16.8.6",
     "react-redux": "^7.0.2",
@@ -26,9 +25,9 @@
     "recharts": "^1.5.0",
     "redux": "^4.0.1",
     "redux-logger": "^3.0.6",
+    "redux-persist": "^5.10.0",
     "redux-thunk": "^2.3.0",
-    "uuid": "^3.3.2",
-    "victory": "^32.2.0"
+    "uuid": "^3.3.2"
   },
   "proxy": "http://localhost:3001",
   "scripts": {
