--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@nivo/line": "^0.56.2",
+    "@svgr/parcel-plugin-svgr": "^4.2.0",
     "axios": "^0.18.0",
     "canvasjs": "^1.8.1",
     "chai": "^4.2.0",
@@ -16,11 +17,13 @@
     "moment": "^2.24.0",
     "momentjs": "^2.0.0",
     "nivo": "^0.31.0",
+    "parcel-bundler": "^1.12.3",
     "react": "^16.8.6",
     "react-d3-library": "^1.1.8",
     "react-dom": "^16.8.6",
     "react-redux": "^7.0.2",
     "react-router": "^4.3.1",
+    "react-samy-svg": "^3.0.7",
     "react-scripts": "2.1.8",
     "recharts": "^1.5.0",
     "redux": "^4.0.1",
